test/corpus/json.txt
=====================
Simple JSON body
=====================
POST http://localhost/

{
  "json_key": "json_value"
}

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))
   (json_body
    (json_object
     (json_key_value
      (identifier) (string))))))

=====================
Empty JSON body
=====================
POST http://localhost/

{
}

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))
   (json_body (json_object))))

=====================
List JSON body
=====================
POST http://localhost/

[
  "json_key", "key2"
]

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))
   (json_body
     (json_list
      (string) (string)))))

=====================
Larger JSON body
=====================
POST http://localhost/

{
  "json_key": "json_value",
  "json_key": "json_value",
  "json_key": "json_value"
}

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))
   (json_body
    (json_object
     (json_key_value
      (identifier) (string))
     (json_key_value
      (identifier) (string))
     (json_key_value
      (identifier) (string))))))

=====================
One line JSON body
=====================
POST http://localhost/

{"json_key": "json_value"}

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))
   (json_body
    (json_object
     (json_key_value
      (identifier) (string))))))

=====================
One line JSON body with random spaces.
=====================
POST http://localhost/

{  "json_key"   : "json_value" }

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))
   (json_body
    (json_object
     (json_key_value
      (identifier) (string))))))

=====================
Nested JSON
=====================
POST http://localhost/

{
  "nested": {
    "json_key": "json_value"
  }
}

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))
   (json_body
    (json_object
     (json_key_value
      (identifier)
      (json_body
       (json_object
        (json_key_value
         (identifier)
         (string)))))))))

=====================
JSON body with a json_list
=====================
POST http://localhost/

{
  "json_key": ["first", "second"]
}

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))
   (json_body
    (json_object
     (json_key_value
      (identifier) (json_list (string) (string)))))))

=====================
JSON body with an empty json_list
=====================
POST http://localhost/

{
  "json_key": []
}

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))
   (json_body
    (json_object
     (json_key_value
      (identifier) (json_list))))))

=====================
JSON body with a json_list of objects
=====================
POST http://localhost/

{
  "json_key": [{
    "name": "json_value"
  }, {
    "name": "json_value"
  }]
}

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))
   (json_body
    (json_object
     (json_key_value
      (identifier)
      (json_list
       (json_body
        (json_object
         (json_key_value
          (identifier) (string))))
       (json_body
        (json_object
         (json_key_value
          (identifier) (string))))))))))
