test/corpus/raw_body.txt
=====================
SimpleaXML body
=====================
POST http://localhost/

<value>a value</value>

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))
   (body (raw_body))))
