test/corpus/urlencoded.txt
=====================
Simple URL encoded body
=====================
POST http://localhost/

username=user&password=pwd

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))
   (url_encoded_body
    (url_encoded_key_value
     (identifier) (identifier))
    (url_encoded_key_value
     (identifier) (identifier)))))

=====================
URL encoded body with variables
=====================
POST http://localhost/

username={{user}}&password=pwd

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))
   (url_encoded_body
    (url_encoded_key_value
     (identifier) (identifier (variable_ref)))
    (url_encoded_key_value
     (identifier) (identifier)))))
