test/corpus/urls.txt
=====================
Simple GET method with trailing slash
=====================
GET http://localhost/

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))))

=====================
Simple GET method with HTTP version
=====================
GET http://localhost HTTP/1.1

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain)) (http_version))))

=====================
Simple GET method without trailing slash
=====================
GET http://localhost

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain)))))

=====================
GET method with path
=====================
GET http://localhost/path/another_path

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))))

=====================
GET method with port
=====================
GET http://localhost:5000/path/another_path

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))))

=====================
GET method with ip
=====================
GET http://127.0.0.7/path/another_path

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))))

=====================
GET method with ip and port
=====================
GET http://127.0.0.7:5000/path/another_path

---

(source_file
  (request
   (method_url (method) (url (scheme) (domain) (path)))))

=====================
GET method with full domain
=====================
GET https://blog-staging2.rstcruzo.com:80/path/another_path

---

(source_file
 (request
  (method_url (method) (url (scheme) (domain) (path)))))

=====================
GET method with query params
=====================
GET http://localhost?param=1

---

(source_file
  (request
   (method_url
    (method)
    (url
     (scheme)
      (domain)
      (query_params
        (query_param parameter_name: (identifier)
                     parameter_value: (identifier)))))))

=====================
GET method empty query params
=====================
GET http://localhost/params?
Content-Type: application/json

---

(source_file
  (request
   (method_url
    (method)
    (url
     (scheme)
     (domain)
      (path)))
   (header (identifier) (rest_of_line))))

=====================
GET method query parameter without value
=====================
GET http://localhost/params?query=
Content-Type: application/json

---

(source_file
  (request
   (method_url
    (method)
    (url
     (scheme)
     (domain)
      (path)
      (query_params (query_param parameter_name: (identifier)))))
   (header header_name: (identifier) header_value: (rest_of_line))))

=====================
GET method query parameter without value and without equals sign
=====================
GET http://localhost/params?query=
Content-Type: application/json

---

(source_file
  (request
   (method_url
    (method)
    (url
     (scheme)
     (domain)
      (path)
      (query_params (query_param parameter_name: (identifier)))))
   (header header_name: (identifier) header_value: (rest_of_line))))
